update parent pom version (#72)
* update parent pom version

* fix travis ci build

* fix travis ci build